@@ -1,3 +1,9 @@
+2001-08-23  John Harper  <jsh@pixelslut.com>
+
+	* widgets/match-window.jl (make-match-window:matchers): search
+	the translated X properties for the real atom name when
+	grabbing properties, don't pass the (translated) property name
+
 2001-07-02  John Harper  <jsh@pixelslut.com>
 
 	* version 0.99
